--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -34,5 +34,5 @@ jobs:
           run: |
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f frontend/Dockerfile frontend
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-       
+       # To test
   
