--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -43,5 +43,5 @@ jobs:
           run: |
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f main_backend/Dockerfile main_backend
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-       # To test I
+       # To test
   
